examples/test/testpolicy7082.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7082
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key13: value25
      key19: value17
      key27: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value13
          key43: value34
          key26: value25
